clusters/newport/core/traefik/auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: routes
spec:
  basicAuth:
    secret: traefik-dashboard-auth
