clusters/newport/core/traefik/mid-ware-rfc1918-whitelist.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: white-list
  namespace: routes
spec:
  ipWhiteList:
    sourceRange:
    - "10.0.0.0/8"
    - "192.168.0.0/16"
    - "172.16.0.0/12"
